fix(overflow): remove overflow hidden rule #210

--- a/src/style.scss
+++ b/src/style.scss
@@ -104,7 +104,6 @@
 :host([rounded]) {
   .trigger,
   .popover {
-    overflow: hidden;
     border-radius: var(--ds-border-radius, $ds-border-radius);
   }
 }
